feat: 验证码登录+CSV数据导出+RBAC权限管理子系统
- 图形验证码: 服务端生成(干扰线+随机旋转), 5分钟过期, 一次性使用
- 数据导出: 管理后台按关键词过滤导出带BOM的CSV, Excel打开中文不乱码
- RBAC: role/permission/role_permission三表, 16个权限点, /admin/rbac三接口(@SaCheckRole ADMIN),
  StpInterfaceImpl从role_permission动态加载权限, /role/assign事务式整体替换, SUPER_ADMIN内置保护
- init.sql: 扩展为9表+2视图+1触发器+1存储过程+17索引, 可重复执行
- 前端: AdminView四tab(概览/用户/内容/权限管理), 新增rbac.js