@@ -1,5 +1,6 @@
 package com.spring.aiprompt.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -8,19 +9,24 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
- * 跨域配置（修正 practice001 的 CosConfig 命名）
+ * 跨域配置
  */
 @Configuration
 public class CorsConfig {
 
+    /** 允许跨域的来源（逗号分隔），从配置读取，默认只放开本地前端 */
+    @Value("${cors.allowed-origins:http://localhost:5173}")
+    private String allowedOrigins;
+
     @Bean
     public FilterRegistrationBean<CorsFilter> corsFilterRegistration() {
         CorsConfiguration config = new CorsConfiguration();
-        // allowCredentials=true 时不能用 "*" 作 allowedOrigins，需用 OriginPatterns
-        config.setAllowedOriginPatterns(List.of("*"));
+        // allowCredentials=true 时不能用 "*" 作 allowedOrigins，白名单从配置读取，避免任意来源携带凭证
+        config.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
